workshop03/myapp-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
    name: myapp1-deploy
    labels:
        name: myapp1-deploy
        version: v1

spec:
    replicas: 1
    selector:
        matchLabels:
            name: myapp1-pod
            version: v1
    template:
        metadata:
            name: myapp1-pod
            labels:
                name: myapp1-pod
                version: v1
        spec:
            containers:
                - name: myapp1-containers
                  image: stackupiss/northwind-app:v1
                  imagePullPolicy: Always
                  ports:
                      - name: myapp1-http
                        containerPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: myapp2-deploy
    labels:
        name: myapp2-deploy
        version: v2

spec:
    replicas: 1
    selector:
        matchLabels:
            name: myapp2-pod
            version: v2
    template:
        metadata:
            name: myapp2-pod
            labels:
                name: myapp2-pod
                version: v2
        spec:
            containers:
                - name: myapp2-containers
                  image: stackupiss/northwind-app:v2
                  imagePullPolicy: Always
                  ports:
                      - name: myapp2-http
                        containerPort: 3000

---
