workshop03/myapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-svc
spec:
  selector:
    name: myapp1-pod
    version: v1
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: myapp2-svc
spec:
  selector:
    name: myapp2-pod
    version: v2
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
