workshop03/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress
metadata:
  name: myapp-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  backend:
    serviceName: myapp2-svc
    servicePort: 80
  rules:
    - host: "appv1.157.230.193.71.nip.io"
      http:
        paths:
        - backend:
              serviceName: myapp1-svc
              servicePort: 80
    - host: "appv2.157.230.193.71.nip.io"
      http:
        paths:
        - backend:
              serviceName: myapp2-svc
              servicePort: 80
